hdone/objects/Hit_Setting__c.object
<CustomObject>
    <description>Settings for Amazon Mechanical Turk submissions. Includes cost, name, requirements, number of HITs.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account for HitSetting. Used primarily for Salesforce to Salesforce integrations</description>
        <inlineHelpText>Account for HitSetting</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hit Settings</relationshipLabel>
        <relationshipName>Hit_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Address Type</description>
        <inlineHelpText>Lookup to Address Type</inlineHelpText>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Hit Settings</relationshipLabel>
        <relationshipName>Hit_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adult_Worker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Requires workers to acknowledge that they are over 18 and that they agree to work on potentially offensive content.</inlineHelpText>
        <label>Adult Worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Duration__c</fullName>
        <description>Minutes allowed for the worker to complete the hit</description>
        <inlineHelpText>Minutes allowed for the worker to complete the hit</inlineHelpText>
        <label>Assignment  Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Post_Id__c</fullName>
        <description>Id for group to post Chatter messages to for specific HIT Setting</description>
        <inlineHelpText>Chatter Group Id</inlineHelpText>
        <label>Chatter Group Post Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparator_1__c</fullName>
        <label>Comparator #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EqualTo</fullName>
                </value>
                <value>
                    <fullName>NotEqualTo</fullName>
                </value>
                <value>
                    <fullName>GreaterThanOrEqualTo</fullName>
                </value>
                <value>
                    <fullName>LessThanOrEqualTo</fullName>
                </value>
                <value>
                    <fullName>LessThan</fullName>
                </value>
                <value>
                    <fullName>GreaterThan</fullName>
                </value>
                <value>
                    <fullName>Exists</fullName>
                </value>
                <value>
                    <fullName>DoesNotExist</fullName>
                </value>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>NotIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparator_2__c</fullName>
        <label>Comparator #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EqualTo</fullName>
                </value>
                <value>
                    <fullName>NotEqualTo</fullName>
                </value>
                <value>
                    <fullName>GreaterThanOrEqualTo</fullName>
                </value>
                <value>
                    <fullName>LessThanOrEqualTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparator_3__c</fullName>
        <label>Comparator #3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EqualTo</fullName>
                </value>
                <value>
                    <fullName>NotEqualTo</fullName>
                </value>
                <value>
                    <fullName>GreaterThanOrEqualTo</fullName>
                </value>
                <value>
                    <fullName>LessThanOrEqualTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Qualification_1__c</fullName>
        <inlineHelpText>Id of the Custom Qualification Created in Mturk</inlineHelpText>
        <label>Custom Qualification #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Qualification_2__c</fullName>
        <inlineHelpText>Id of the Custom Qualification Created in Mturk</inlineHelpText>
        <label>Custom Qualification #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Qualification_3__c</fullName>
        <inlineHelpText>Id of the Custom Qualification Created in Mturk</inlineHelpText>
        <label>Custom Qualification #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Qualification_Score_1__c</fullName>
        <description>Maximum Value allowed is 100</description>
        <inlineHelpText>Maximum Value allowed is 100</inlineHelpText>
        <label>Custom Qualification Score #1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Qualification_Score_2__c</fullName>
        <description>Maximum Value allowed is 100</description>
        <inlineHelpText>Maximum Value allowed is 100</inlineHelpText>
        <label>Custom Qualification Score #2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Qualification_Score_3__c</fullName>
        <description>Maximum Value allowed is 100</description>
        <inlineHelpText>Maximum Value allowed is 100</inlineHelpText>
        <label>Custom Qualification Score #3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Generic Date Field</description>
        <inlineHelpText>Generic Date Field</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Upload_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to force a file Upload with the Hit</description>
        <inlineHelpText>Check this box to force a file Upload with the Hit</inlineHelpText>
        <label>File Upload Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_1__c</fullName>
        <description>Grade for Score 1</description>
        <inlineHelpText>Grade 1</inlineHelpText>
        <label>Grade 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_2__c</fullName>
        <label>Grade 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hit_Approval_Percentage__c</fullName>
        <inlineHelpText>The percentage of assignments the Worker has submitted that were subsequently approved by the Requester, over all assignments the Worker has submitted. The value is an integer between 0 and 100.</inlineHelpText>
        <label>Hit Approval (Percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hit_Rejection_Percentage__c</fullName>
        <inlineHelpText>The percentage of assignments the Worker has submitted that were subsequently rejected by the Requester, over all assignments the Worker has submitted. The value is an integer between 0 and 100.</inlineHelpText>
        <label>Hit Rejection (Percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hit_Setting_For_QA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to HIT Setting for Quality Review</description>
        <inlineHelpText>Link to HIT Setting for QA</inlineHelpText>
        <label>Hit Setting For QA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may only select a setting used for Quality Reviews. Please review your selections or create a new HIT Setting if needed.</errorMessage>
            <filterItems>
                <field>Hit_Setting__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Quality_Review</value>
            </filterItems>
            <infoMessage>You can only lookup to HIT Settings used for Quality Reviews</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hit_Setting__c</referenceTo>
        <relationshipLabel>Hit Settings</relationshipLabel>
        <relationshipName>Hit_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hits_Abandoned_Percentage__c</fullName>
        <inlineHelpText>The percentage of assignments the Worker has abandoned (allowed the deadline to elapse), over all assignments the Worker has accepted. The value is an integer between 0 and 100</inlineHelpText>
        <label>Hits Abandoned (Percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hits_Returned_Percentage__c</fullName>
        <inlineHelpText>The percentage of assignments the Worker has returned, over all assignments the Worker has accepted. The value is an integer between 0 and 100.</inlineHelpText>
        <label>Hits Returned (Percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hits_Submitted_Percentage__c</fullName>
        <inlineHelpText>The percentage of assignments the Worker has submitted, over all assignments the Worker has accepted. The value is an integer between 0 and 100.</inlineHelpText>
        <label>Hits Submitted (Percentage)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Identifier Type</description>
        <inlineHelpText>Lookup to Identifier Type</inlineHelpText>
        <label>Identifier Type</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>Hit Settings</relationshipLabel>
        <relationshipName>Hit_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <description>Instructions usually for Mturk Hits. Instructions are displayed to workers.</description>
        <inlineHelpText>Instructions for Hit</inlineHelpText>
        <label>Instructions</label>
        <length>7500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Hit Setting is active</description>
        <inlineHelpText>Is record active?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LifeTime__c</fullName>
        <inlineHelpText>Amount of time, for which the hit is valid eg 10 hours, 10 days after publication</inlineHelpText>
        <label>LifeTime (In Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long_Text_Area_Questions__c</fullName>
        <description>By Default the text boxes generated are of 255 characters. Select Questions that should have long text area as the answer box</description>
        <inlineHelpText>By Default the text boxes generated are of 255 characters. Select Questions that should have long text area as the answer box</inlineHelpText>
        <label>Long Text Area Questions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_File_Size_In_KB__c</fullName>
        <description>Maximum should &lt;= 25 MB,</description>
        <inlineHelpText>Maximum should &lt;= 25 MB</inlineHelpText>
        <label>Max File Size In KB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Assignments__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Maximum number of assignments per hit, ie. how many workers can work on the hit</description>
        <inlineHelpText>Maximum number of assignments per hit, ie. how many workers can work on the hit</inlineHelpText>
        <label>Maximum Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_File_Size_In_KB__c</fullName>
        <description>Minimum File Size In KBs</description>
        <inlineHelpText>Minimum File Size In KBs</inlineHelpText>
        <label>Min File Size (In KB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Hits_Approved__c</fullName>
        <inlineHelpText>Specifies the total number of HITs submitted by a Worker that have been approved. The value is an integer greater than or equal to 0</inlineHelpText>
        <label>Minimum Hits Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Type of payment</description>
        <inlineHelpText>Type of payment</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Auto Bonus</fullName>
                </value>
                <value>
                    <fullName>Manual Bonus</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>Primary phone for a Hit Setting. Used for telephone calls.</description>
        <inlineHelpText>Primary phone for Hit Setting</inlineHelpText>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Prouduct Code</description>
        <inlineHelpText>Prouduct Code</inlineHelpText>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Provider or Contact for Hit Setting if applicable</description>
        <inlineHelpText>Contact associated with Hit Setting</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hit Settings</relationshipLabel>
        <relationshipName>Hit_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q10_Id__c</fullName>
        <description>Question 10 Identifier if any. Usually used for Audit Settings to populate Identifier on related objects.</description>
        <inlineHelpText>Question 10 Identifier if any</inlineHelpText>
        <label>Q10_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q11_Id__c</fullName>
        <description>Question 11 Identifier if any. Usually used for Audit Settings to populate Identifier on related objects.</description>
        <inlineHelpText>Question 11 Identifier if any</inlineHelpText>
        <label>Q11_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q12_Id__c</fullName>
        <description>Question 12 Identifier if any. Usually used for Audit Settings to populate Identifier on related objects.</description>
        <inlineHelpText>Question 12 Identifier if any</inlineHelpText>
        <label>Q12_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <inlineHelpText>Reward offered to the worker for completing the hit</inlineHelpText>
        <label>Reward</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scenario_Summary__c</fullName>
        <description>Summary of Scenario</description>
        <inlineHelpText>Summary of Scenario</inlineHelpText>
        <label>Scenario Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_1__c</fullName>
        <description>Score 1. Used for scoring Audit Reports</description>
        <inlineHelpText>Score 1</inlineHelpText>
        <label>Score 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Score_2__c</fullName>
        <inlineHelpText>Score 2</inlineHelpText>
        <label>Score 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Secondary phone number for Hit Setting</description>
        <inlineHelpText>Secondary phone</inlineHelpText>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <description>Service area covered by Hit Setting.</description>
        <inlineHelpText>Service area</inlineHelpText>
        <label>Service Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>Any special instructions for particular Hit. Deviate from master instructions which are same across many Settings.</description>
        <inlineHelpText>Special instructions for Hit</inlineHelpText>
        <label>Special Instructions</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Specialty. Should likely be Custom Setting or Metadata type</description>
        <inlineHelpText>Lookup to Specialty. Should likely be Custom Setting or Metadata type</inlineHelpText>
        <label>Specialty</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Hit Settings</relationshipLabel>
        <relationshipName>Hit_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <description>Applicable states for Hit Setting</description>
        <inlineHelpText>States</inlineHelpText>
        <label>States</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transcription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary hardcoded for Transcriptions. Does not grab questions from original AuditSetting</description>
        <inlineHelpText>Temporary hardcoded for Transcriptions</inlineHelpText>
        <label>Transcription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Hit Setting</description>
        <inlineHelpText>Type of Hit Setting</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_1</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_2</fullName>
                </value>
                <value>
                    <fullName>MemberServicesCompliance</fullName>
                </value>
                <value>
                    <fullName>Directory_Check</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_3</fullName>
                </value>
                <value>
                    <fullName>In Person Single Staff</fullName>
                </value>
                <value>
                    <fullName>Provider_Master_4</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>PharmacyMailOrder</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Plan List</fullName>
                </value>
                <value>
                    <fullName>Disenrollment</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>HIV</fullName>
                </value>
                <value>
                    <fullName>HomelessTransportation</fullName>
                </value>
                <value>
                    <fullName>Member Mailing</fullName>
                </value>
                <value>
                    <fullName>ApprovalNotification</fullName>
                </value>
                <value>
                    <fullName>HomeHealthChange</fullName>
                </value>
                <value>
                    <fullName>ProviderSelection</fullName>
                </value>
                <value>
                    <fullName>TransportationNonEmergent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_Worker_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the hit needs to be completed by a worker, whose mailing address is in US</inlineHelpText>
        <label>US Worker Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Worker_Locale__c</fullName>
        <inlineHelpText>The location of the Worker, as specified in the Worker&apos;s mailing address</inlineHelpText>
        <label>Worker Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Not US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Hit Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hit Settings</pluralLabel>
    <recordTypes>
        <fullName>Master_Hit_Setting</fullName>
        <active>true</active>
        <description>Used to create other record types</description>
        <label>Master Hit Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mturk</fullName>
        <active>true</active>
        <description>Standard Mturk HIT Setting</description>
        <label>Mturk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Review</fullName>
        <active>true</active>
        <description>HIT Settings for Quality Review</description>
        <label>Quality Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Assignment_Duration_Minimum</fullName>
        <active>true</active>
        <description>Checks that the duration of assignment is greater than zero.</description>
        <errorConditionFormula>NOT(Assignment_Duration__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Assignment_Duration__c</errorDisplayField>
        <errorMessage>The assignment duration must be more than zero minutes. Please check this and change your value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lifetime_Minimum</fullName>
        <active>true</active>
        <description>Checks that the lifetime is greater than zero.</description>
        <errorConditionFormula>NOT( LifeTime__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>LifeTime__c</errorDisplayField>
        <errorMessage>The lifetime must be more than zero. Please check this and change your value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Assignments_Minimum</fullName>
        <active>true</active>
        <description>Checks that the maximum assignments is greater than zero.</description>
        <errorConditionFormula>NOT( Maximum_Assignments__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Maximum_Assignments__c</errorDisplayField>
        <errorMessage>The maximum assignments must be more than zero. Please check this and change your value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reward_Minimum</fullName>
        <active>true</active>
        <description>Checks that the reward minimum is met.</description>
        <errorConditionFormula>NOT( Reward__c &gt; 0)</errorConditionFormula>
        <errorDisplayField>Reward__c</errorDisplayField>
        <errorMessage>The reward must be greater than zero. Please check and change this value.</errorMessage>
    </validationRules>
</CustomObject>